--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-player": "^2.11.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-web-share": "^2.0.2",
     "web-vitals": "^2.1.4",
     "youtube-thumbnail-grabber": "^1.0.2"
   },
