revamp retrtape features and views

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,15 @@
 {
   "projects": {
     "default": "checkapppp"
-  }
+  },
+  "targets": {
+    "checkapppp": {
+      "hosting": {
+        "retrotape": [
+          "retrotape"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
