--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,7 @@
   },
   "hosting": {
     "public": "build",
+    "target": "retrotape",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -16,5 +17,8 @@
         "destination": "/index.html"
       }
     ]
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
